# insight-ai

./: .env.example  .gitignore  00_START_HERE.md  DELIVERABLES.md  DELIVERY_SUMMARY.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.init  FEATURES_COMPLETE.md  FEATURES_IMPLEMENTED.md  FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.txt  INDEX.md  PRESENTATION.md  PROJECT_COMPLETE.txt  PROJECT_OVERVIEW.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SETUP.md  SUBMISSION_CHECKLIST.md  TESTING.md  VISUAL_OVERVIEW.md  docker-compose.yml  package.json  pyproject.toml
app/: layout.tsx  page.tsx
app/api/dashboard-chart/: route.ts
app/api/dashboard-data/: route.ts
app/api/dashboard-insights/: route.ts
app/api/generate-story/: route.ts
app/api/kpis/: route.ts
app/api/query/: route.ts
app/api/upload-csv/: route.ts
backend/: .env  __init__.py  chart_selector.py  database.py  insight_generator.py  main.py  requirements.txt  sql_generator.py
components/: AIStoryPanel.tsx  CSVUpload.tsx  ChartContainer.tsx  ConversationHistory.tsx  DashboardCharts.tsx  DashboardLayout.tsx  InsightsPanel.tsx  KpiCards.tsx  QueryInput.tsx  QueryStatus.tsx  Sidebar.tsx
data/: amazon_sales.db
lib/: mockData.ts
scripts/: load_data.py  setup.py
