[project]
name = "insightai-backend"
version = "0.1.0"
description = "Conversational BI Dashboard Backend"
requires-python = ">=3.9"

dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "python-multipart==0.0.6",
    "pandas==2.1.4",
    "sqlalchemy==2.0.23",
    "google-generativeai==0.3.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.3",
    "cors==1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
